--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<title>PRJ00: Nome do Projeto Web</title>
 		<link href="prj06_CSS.css" rel="stylesheet" type="text/css">
-		<script src="../../bandasBD.js"></script>
+		<script src="bandasBD.js"></script>
 		<script src="prj06_PARS.js"></script>
 		<script src="prj06_FUNC.js"></script>
 	</head>
