--- a/prj07_HTML.html
+++ b/prj07_HTML.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<title>PRJ07: Cinco Bandas Míticas #02</title>
 		<link href="prj07_CSS.css" rel="stylesheet" type="text/css">
-		<script src="../../Recursos/Projs/CincoBandas/bandasBD.js"></script>
+		<script src="CincoBandas/bandasBD.js"></script>
 		<script src="prj07_PARS.js"></script>
 		<script src="prj07_FUNC.js"></script>
 	</head>
